fixed padding and spacing on merch details

--- a/tempo_project/tempo_app/static/css/merch-detail.css
+++ b/tempo_project/tempo_app/static/css/merch-detail.css
@@ -18,10 +18,6 @@ body {
     text-transform: uppercase;
 }
 
-.container {
-    padding: 60px 0px 50px 0px;
-}
-
 .description {
     text-transform: uppercase;
 }
@@ -42,17 +38,17 @@ body {
 .card-content {
     display: flex;
     flex-direction: column;
-    height: 100%; 
 }
 
 .text {
     transform: translateY(100px);
+    height: 300px; 
 }
 
 footer {
     display: flex;
     justify-content: center;
-    padding: 50px 0px 20px 0px;
+    /* padding: 50px 0px 20px 0px; */
     text-align: center;
 }
 
