--- a/tempo_project/tempo_app/static/css/merch-index.css
+++ b/tempo_project/tempo_app/static/css/merch-index.css
@@ -59,7 +59,7 @@ footer {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-bottom: 90px;
+  padding-bottom: 60px;
 }
 
 .item-name {
